--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -649,7 +649,7 @@ subtitle:
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   source: false
   sub:
-    - <a href="https://hackmd.io/w2LnAepIRna4xcgnAmQiwg">中文履歷</a><br>英文履歷
+    - No Pain No Gain, No Gain Need Pain Pain Pain!!!<br><a href="https://www.cakeresume.com/resume-editor/a0926151140/edit">中文履歷</a><br><a href="https://drive.google.com/file/d/1niV_L6adVL0yzkrBGU1uL-HxRJZ08MGE/view?usp=share_link">英文履歷</a>
 
 # Loading Animation (加載動畫)
 preloader:
